--- a/resources/assets/sass/_animations.sass
+++ b/resources/assets/sass/_animations.sass
@@ -18,6 +18,14 @@ $bouncy: cubic-bezier(.87,-.41,.19,1.44)
         +opacity(1)
         transform: translateX(0)
 
+@keyframes up-in
+    from
+        +opacity(0)
+        transform: translateY(-2rem)
+    to
+        +opacity(1)
+        transform: translateY(0)
+
 @keyframes show-modal
     from
         +opacity(0)
