--- a/resources/assets/sass/_main.sass
+++ b/resources/assets/sass/_main.sass
@@ -44,3 +44,7 @@
             &:hover
                 color: $red
                 cursor: pointer
+    .box
+        .title
+            font-weight: 400
+            margin-bottom: 1rem
