--- a/public/css/app.css
+++ b/public/css/app.css
@@ -830,7 +830,7 @@ img {
   background: rgba(0, 0, 0, 0.7);
   bottom: 0;
   left: 0;
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
   z-index: 99;
