--- a/resources/assets/sass/_modal.sass
+++ b/resources/assets/sass/_modal.sass
@@ -5,7 +5,7 @@
     background: rgba($black, 0.7)
     bottom: 0
     left: 0
-    position: absolute
+    position: fixed
     right: 0
     top: 0
     z-index: 99
