--- a/public/css/app.css
+++ b/public/css/app.css
@@ -439,10 +439,6 @@ img {
   width: 100%;
 }
 
-.main .section-title .add {
-  float: right;
-}
-
 .main .notification {
   font-size: 16px;
   font-size: 1.1428571429rem;
@@ -840,11 +836,24 @@ img {
   visibility: visible;
   filter: alpha(opacity=100);
   opacity: 1;
-  -webkit-animation: show-modal 0.3s ease-in-out;
-  animation: show-modal 0.3s ease-in-out;
+  -webkit-animation: show-modal .3s forwards ease-in-out;
+  animation: show-modal .3s forwards ease-in-out;
+}
+
+.layer.show .modal {
+  visibility: visible;
+  filter: alpha(opacity=100);
+  opacity: 1;
+  -webkit-transform: translate(-50%, 10%);
+  transform: translate(-50%, 10%);
+  -webkit-transition: all 0.3s cubic-bezier(0.87, -0.41, 0.19, 1.44);
+  transition: all 0.3s cubic-bezier(0.87, -0.41, 0.19, 1.44);
 }
 
 .layer .modal {
+  visibility: hidden;
+  filter: alpha(opacity=0);
+  opacity: 0;
   background: #fff;
   border-radius: 0.2142857143rem;
   box-shadow: 0 2px 5px 3px rgba(0, 0, 0, 0.1);
