--- a/resources/assets/sass/_main.sass
+++ b/resources/assets/sass/_main.sass
@@ -14,6 +14,7 @@
         +font-size(28px)
         border-bottom: 1px solid $gray
         font-weight: 600
+        margin: 0
         padding-bottom: .5rem
         width: 100%
     .notification
@@ -46,3 +47,13 @@
         .title
             font-weight: 400
             margin-bottom: 1rem
+    .errors
+        list-style: none
+        .error
+            +font-size(16px)
+            color: $red
+            margin-bottom: 1rem
+            .typcn
+                color: $red
+            &:last-child
+                margin: 0
