--- a/resources/assets/sass/_modal.sass
+++ b/resources/assets/sass/_modal.sass
@@ -50,3 +50,8 @@
                     cursor: pointer
         .content
             padding: 1rem
+            p
+                +font-size(16px)
+                margin-bottom: .5rem
+                &:last-child
+                    margin: 0
