Add Email log and products import

--- a/resources/assets/sass/_grid.sass
+++ b/resources/assets/sass/_grid.sass
@@ -8,6 +8,16 @@ $columns: 12
 $gutter: 1rem
 $max-width: 1200px
 
+$large-size: 1200px
+$medium-size: 768px
+$small-size: 680px
+$xsmall-size: 320px
+
+$large: "max-width: " + $large-size
+$medium: "max-width: " + $medium-size
+$small: "max-width: " + $small-size
+$xsmall: "max-width: " + $xsmall-size
+
 .wrapper
     margin: 0 auto
     width: $max-width
