--- a/resources/assets/sass/_sidebar.sass
+++ b/resources/assets/sass/_sidebar.sass
@@ -7,7 +7,7 @@
     color: $white
     height: 100vh
     left: 0
-    min-height: 100vh
+    min-height: 100%
     position: fixed
     top: 0
     width: rem(200px)
