--- a/public/css/app.css
+++ b/public/css/app.css
@@ -342,7 +342,7 @@ img {
   color: #fff;
   height: 100vh;
   left: 0;
-  min-height: 100vh;
+  min-height: 100%;
   position: fixed;
   top: 0;
   width: 14.2857142857rem;
@@ -420,11 +420,18 @@ img {
   animation: left-in 0.6s forwards cubic-bezier(0.87, -0.41, 0.19, 1.44);
   background: #ecf0f1;
   color: #2c3e50;
-  margin-left: 14.2857142857rem;
-  min-height: 100vh;
+  left: 14.2857142857rem;
+  margin: 0;
+  min-height: 100%;
   padding: 1rem 2rem;
   position: relative;
   width: calc(100% - 14.2857142857rem);
+}
+
+@media only screen and (max-width: 768px) {
+  .main .col-6 {
+    width: 100%;
+  }
 }
 
 .main .section-title {
