--- a/resources/assets/sass/_main.sass
+++ b/resources/assets/sass/_main.sass
@@ -4,11 +4,15 @@
     animation: left-in 0.6s forwards $bouncy
     background: $cloud
     color: $dark
-    margin-left: rem(200px)
-    min-height: 100vh
+    left: rem(200px)
+    margin: 0
+    min-height: 100%
     padding: 1rem 2rem
     position: relative
     width: calc(100% - #{rem(200px)})
+    .col-6
+        +bp($medium)
+            width: 100%
     .section-title
         +clear
         +font-size(28px)
