Change select2 behavior when adding tag and test focus on iPad

--- a/resources/assets/sass/_table.sass
+++ b/resources/assets/sass/_table.sass
@@ -83,7 +83,8 @@
                     color: inherit
                     display: block
                     position: relative
-                    &:hover
+                    &:hover,
+                    &:focus
                         .list
                             +opacity(1)
                     .list
