--- a/public/css/app.css
+++ b/public/css/app.css
@@ -672,8 +672,9 @@ img {
   position: relative;
 }
 
-.table tbody tr td .dropdown:hover .list,
-.table tfoot tr td .dropdown:hover .list {
+.table tbody tr td .dropdown:hover .list, .table tbody tr td .dropdown:focus .list,
+.table tfoot tr td .dropdown:hover .list,
+.table tfoot tr td .dropdown:focus .list {
   visibility: visible;
   filter: alpha(opacity=100);
   opacity: 1;
