--- a/resources/assets/sass/_form.sass
+++ b/resources/assets/sass/_form.sass
@@ -37,3 +37,8 @@
                     padding: .15rem .5rem
                 .select2-selection__arrow
                     height: 100%
+    &.search
+        [class^="col-"]
+            padding: .5rem
+            .form-group
+                margin: 0
