--- a/resources/assets/sass/_table.sass
+++ b/resources/assets/sass/_table.sass
@@ -81,6 +81,7 @@
                 .dropdown
                     +font-size(20px)
                     color: inherit
+                    cursor: pointer
                     display: inline-block
                     position: relative
                     .list
