--- a/resources/assets/sass/_form.sass
+++ b/resources/assets/sass/_form.sass
@@ -42,3 +42,7 @@
             padding: .5rem
             .form-group
                 margin: 0
+    &.estimate_form
+        +bp('max-width: 1000px')
+            .col-3
+                width: 50%
