--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1098,6 +1098,12 @@ img {
   display: block;
 }
 
+@media only screen and (max-width: 1200px) {
+  .summary .col-4 {
+    width: 50%;
+  }
+}
+
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
