--- a/resources/assets/sass/print.sass
+++ b/resources/assets/sass/print.sass
@@ -26,6 +26,8 @@ body
                 font-weight: 400
                 padding: .2rem
                 width: 49%
+                &.right
+                    padding-left: 12rem
     .estimate-table
         border-collapse: collapse
         margin-bottom: .5rem
