--- a/resources/assets/sass/_table.sass
+++ b/resources/assets/sass/_table.sass
@@ -30,7 +30,8 @@
                     +font-size(16px)
                     font-weight: bold
                 .product-category,
-                .product-brand
+                .product-brand,
+                .product-dimensions
                     +font-size(14px)
                 .link
                     color: $blue
