--- a/public/css/print.css
+++ b/public/css/print.css
@@ -77,7 +77,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   padding: .5rem;
-  text-align: left;
+  text-align: center;
   text-transform: uppercase;
 }
 
