--- a/resources/assets/sass/print.sass
+++ b/resources/assets/sass/print.sass
@@ -40,7 +40,7 @@ body
                     +font-size(14px)
                     font-weight: 400
                     padding: .5rem
-                    text-align: left
+                    text-align: center
                     text-transform: uppercase
         tbody,
         tfoot
