--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3901,13 +3901,13 @@ template {
 }
 
 /*!
- * Datepicker v0.4.0
+ * Datepicker v0.5.0
  * https://github.com/fengyuanchen/datepicker
  *
- * Copyright (c) 2014-2016 Fengyuan Chen
+ * Copyright (c) 2014-2017 Fengyuan Chen
  * Released under the MIT license
  *
- * Date: 2016-10-15T04:28:09.384Z
+ * Date: 2017-02-11T13:41:05.813Z
  */
 .datepicker-container {
   font-size: 12px;
@@ -4019,12 +4019,16 @@ template {
   background-color: #fff;
 }
 
-.datepicker-panel > ul > li:hover {
-  background-color: #eee;
+.datepicker-panel > ul > li.highlighted, .datepicker-panel > ul > li:hover {
+  background-color: #e6f2ff;
 }
 
 .datepicker-panel > ul > li.muted, .datepicker-panel > ul > li.muted:hover {
   color: #999;
+}
+
+.datepicker-panel > ul > li.highlighted:hover {
+  background-color: #cce6ff;
 }
 
 .datepicker-panel > ul > li.picked, .datepicker-panel > ul > li.picked:hover {
@@ -4035,6 +4039,10 @@ template {
   cursor: default;
   color: #ccc;
   background-color: #fff;
+}
+
+.datepicker-panel > ul > li.disabled.highlighted, .datepicker-panel > ul > li.disabled:hover.highlighted {
+  background-color: #e6f2ff;
 }
 
 .datepicker-panel > ul > li[data-view='years prev'], .datepicker-panel > ul > li[data-view='year prev'], .datepicker-panel > ul > li[data-view='month prev'], .datepicker-panel > ul > li[data-view='years next'], .datepicker-panel > ul > li[data-view='year next'], .datepicker-panel > ul > li[data-view='month next'], .datepicker-panel > ul > li[data-view=next] {
