--- a/public/css/print.css
+++ b/public/css/print.css
@@ -34,37 +34,11 @@ body {
 }
 
 .estimate-print {
-  padding: 2rem;
-}
-
-.estimate-print .header .logo {
-  background: #000;
-  padding: 1rem;
-  text-align: center;
-}
-
-.estimate-print .header .logo .img {
-  width: 10.7142857143rem;
-}
-
-.estimate-print .header .info {
-  padding: .5rem 0;
-}
-
-.estimate-print .header .info .data {
-  font-size: 14px;
-  font-size: 1rem;
-  display: inline-block;
-  font-weight: 400;
-  padding: .2rem;
-  width: 49%;
-}
-
-.estimate-print .header .info .data.right {
-  padding-left: 12rem;
+  padding: 0 2rem 1rem 2rem;
 }
 
 .estimate-print .estimate-table {
+  page-break-inside: auto;
   border-collapse: collapse;
   margin-bottom: .5rem;
   width: 100%;
@@ -79,6 +53,17 @@ body {
   padding: .5rem;
   text-align: center;
   text-transform: uppercase;
+}
+
+.estimate-print .estimate-table tbody,
+.estimate-print .estimate-table tfoot {
+  display: table-row-group;
+}
+
+.estimate-print .estimate-table tbody tr,
+.estimate-print .estimate-table tfoot tr {
+  page-break-inside: avoid;
+  page-break-after: auto;
 }
 
 .estimate-print .estimate-table tbody tr:nth-child(odd),
@@ -164,59 +149,6 @@ body {
 .estimate-print .estimate-table tfoot tr td .qty {
   font-size: 16px;
   font-size: 1.1428571429rem;
-}
-
-.estimate-print .notes,
-.estimate-print .observations {
-  margin-bottom: .5rem;
-}
-
-.estimate-print .notes .left,
-.estimate-print .observations .left {
-  display: inline-block;
-  width: 80%;
-}
-
-.estimate-print .notes .right,
-.estimate-print .observations .right {
-  display: inline-block;
-  width: 19%;
-}
-
-.estimate-print .notes .title,
-.estimate-print .observations .title {
-  font-size: 14px;
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.estimate-print .notes .content,
-.estimate-print .observations .content {
-  font-size: 12px;
-  font-size: 0.8571428571rem;
-  line-height: 1.5;
-}
-
-.estimate-print .signature {
-  font-size: 13px;
-  font-size: 0.9285714286rem;
-  text-align: center;
-}
-
-.estimate-print .footer {
-  font-size: 12px;
-  font-size: 0.8571428571rem;
-  margin-top: 1rem;
-  text-align: center;
-}
-
-.estimate-print .footer .address {
-  width: 100%;
-}
-
-.estimate-print .footer .contact span {
-  display: inline-block;
-  padding: 0 2rem;
 }
 
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
