--- a/resources/assets/sass/print.sass
+++ b/resources/assets/sass/print.sass
@@ -10,25 +10,9 @@ body
     background: $white
 
 .estimate-print
-    padding: 2rem
-    .header
-        .logo
-            background: $black
-            padding: 1rem
-            text-align: center
-            .img
-                width: rem(150px)
-        .info
-            padding: .5rem 0
-            .data
-                +font-size(14px)
-                display: inline-block
-                font-weight: 400
-                padding: .2rem
-                width: 49%
-                &.right
-                    padding-left: 12rem
+    padding: 0 2rem 1rem 2rem
     .estimate-table
+        page-break-inside: auto
         border-collapse: collapse
         margin-bottom: .5rem
         width: 100%
@@ -44,7 +28,10 @@ body
                     text-transform: uppercase
         tbody,
         tfoot
+            display: table-row-group
             tr
+                page-break-inside: avoid
+                page-break-after: auto
                 &:nth-child(odd)
                     background: #f8f8f8
                 td
@@ -85,31 +72,3 @@ body
                             text-decoration: line-through
                     .qty
                         +font-size(16px)
-    .notes,
-    .observations
-        margin-bottom: .5rem
-        .left
-            display: inline-block
-            width: 80%
-        .right
-            display: inline-block
-            width: 19%
-        .title
-            +font-size(14px)
-            font-weight: 600
-        .content
-            +font-size(12px)
-            line-height: 1.5
-    .signature
-        +font-size(13px)
-        text-align: center
-    .footer
-        +font-size(12px)
-        margin-top: 1rem
-        text-align: center
-        .address
-            width: 100%
-        .contact
-            span
-                display: inline-block
-                padding: 0 2rem
