--- a/resources/assets/sass/print.sass
+++ b/resources/assets/sass/print.sass
@@ -21,7 +21,7 @@ body
                 th
                     background: $black
                     color: $white
-                    +font-size(14px)
+                    +font-size(13px)
                     font-weight: 400
                     padding: .5rem
                     text-align: center
@@ -36,7 +36,7 @@ body
                     background: #f8f8f8
                 td
                     +font-size(14px)
-                    padding: .5rem
+                    padding: .3rem .5rem
                     .product-title
                         +font-size(14px)
                         font-weight: 600
@@ -46,10 +46,10 @@ body
                     .product-description
                         +font-size(13px)
                     .product-photo
-                        height: rem(60px)
+                        height: rem(40px)
                         overflow: hidden
                         position: relative
-                        width: rem(60px)
+                        width: rem(40px)
                         .img
                             position: relative
                             top: 50%
